WendzelNNTPd ChangeLog:

----------------- version 2.x ------------------

2.1.2-current "Sydney/???" : ??-???-202?
 ADDED_FEATURES:
 - Added support for parameters -h and -v now to check for the version.
 - init (rc.d) script is now patched to desired DESTDIR in configure.
MISC:
 - Improved wording/fixed some typos.

2.1.1-stable "Sydney/Crows Nest" : 05-Jan-2021
 MISC:
 - Updated documentation to better reflect the new 2.1 sub-version.
 - Tiny adjustments of provided text files.
 - Removed "OSE (Open Source Edition)" string as there is (nor ever
   was!) a non-free edition of this software.

2.1.0-stable "Sydney (Post-NYE Release 2021)" : 04-Jan-2021
 FIXES:
 - Improved error handling in database.c:
   - Removed a memory leak and unclosed file handles in case of errors
 - Improved error handling in db_sqlite3.c:
   - *Explicitly* use zero body length if length of body is zero
     (should not be possible but this makes the code safer).
 ADDED_FEATURES:
 - Finally, passwords are saved using a hash function (SHA2, 256 bits).
   The hashed string is a concatenation of a configurable system-wide
   salt, the username and the password. This is not a perfect solution
   since it would be better to have unique salts per user (currently
   the "unique salt" is just the username), but it is at least a start.
 MISC:
 - Improved documentation, thanks to @deavmi
 - Default max size for postings is now 20 MBytes in config file.
 - Tiny improvements of coding style

2.0.9-stable "Bergen, Christmas Release 2017" : 18-Dec-2017
 FIXES:
 - 'configure' script did not check whether the `install' tool is
   present. The tool's presence is now also checked.
 MISC:
 - Old RFC 850 mentions YY (two-digit) yearly format. However, INNd
   uses YYYY (four-digit) yearly format. WendzelNNTPd now does the
   same.
 - Tiny code cleanup (removed two doubled prototype definitions).
 - Ran WendzelNNTPd with lib efence, just to see whether memory leaks